2019-1/230/users/2151/executions/1624_2926.log
== TEST (2019-04-01 16:17:21) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

pa = 24.0 * acai
pe = 3 * esfirras


print(pa + pe)
-- OUTPUT:
12099.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:18:39) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai * 1000

pa = 24.0 * k
pe = 3 * esfirras


	
print(pa + pe)
-- OUTPUT:
12096003.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:18:58) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras


	
print(pa + pe)
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:19:03) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras


	
print(pa + pe)
-- EXECUTION TIME:
0.152389
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.096
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.128
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.304
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:19:38) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 100

pa = 24.0 * k
pe = 3 * esfirras
	
print(pa + pe)
-- OUTPUT:
123.96000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:19:44) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 100

pa = 24.0 * k
pe = 3 * esfirras
	
print(pa + pe)
-- EXECUTION TIME:
0.16318
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
123.96000000000001
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
167.28
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
233.04000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:20:13) 
-- CODE:
acai = int(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print(pa + pe)
-- EXECUTION TIME:
0.18936
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.096
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.128
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.304
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:20:29) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print("pa + pe")
-- EXECUTION TIME:
0.173828
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
pa + pe
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
pa + pe
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
pa + pe
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:20:30) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print("pa + pe")
-- EXECUTION TIME:
0.202316
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
pa + pe
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
pa + pe
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
pa + pe
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:20:53) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai // 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print("pa + pe")
-- EXECUTION TIME:
0.180151
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
pa + pe
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
pa + pe
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
pa + pe
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:23:32) 
-- CODE:
acai = int(input(":"))
esfirras = float(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print("pa + pe")
-- EXECUTION TIME:
0.138388
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
pa + pe
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
::pa + pe
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
::pa + pe
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:24:27) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
print(round("pa + pe",2)
-- EXECUTION TIME:
0.212565
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 10
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:24:54) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
total = pa + pe

print(round(total,2)
		
-- EXECUTION TIME:
0.20208
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 13
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:24:54) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras
	
total = pa + pe

print(round(total,2)
		
-- ERROR:
File "XXXX", line 13
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:25:07) 
-- CODE:
acai = float(input(":"))
esfirras = int(input(":"))

k = acai / 1000

pa = 24.0 * k
pe = 3 * esfirras	
total = pa + pe

print(round(total,2)
-- EXECUTION TIME:
0.215239
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:25:51) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 100

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total,2)
-- EXECUTION TIME:
0.160796
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:26:22) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 1000

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total,2)
-- ERROR:
File "XXXX", line 11
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:26:33) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 1000

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total, 2)
-- EXECUTION TIME:
0.213388
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:26:36) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 1000

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total , 2)
-- EXECUTION TIME:
0.176209
-- ERROR:
  File "/home/codebench/codes/1624/2926/main.py", line 11
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:26:40) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 1000

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total, 2)
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 16:27:08) 
-- CODE:
a = float(input(":"))
e = int(input(":"))

k = a / 1000

pa = 24.0 * k
pe = 3 * e	
total = pa + pe

print(round(total, 2))
-- EXECUTION TIME:
0.167176
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.13
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
